# moot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: publish.md
docs/specs/: devcontainer-orchestration.md  moot-cli-brand-login.md  moot-init-full-provisioning.md  moot-up-progress-output.md  oas-mock-refresh.md  per-agent-profiles.md  post-create-fixes.md
src/moot/: __init__.py  __main__.py  auth.py  cli.py  config.py  devcontainer.py  id_encoding.py  launch.py  lifecycle.py  models.py  provision.py  response_format.py  scaffold.py  team_profile.py
src/moot/adapters/: channel_adapter.py  channel_runner.py  mcp_adapter.py  mcp_runner.py  notification_core.py  notify_runner.py  tmux_delivery.py
src/moot/templates/devcontainer/: devcontainer.json  post-create.sh  run-moot-channel.sh  run-moot-mcp.sh  run-moot-notify.sh
src/moot/templates/skills/product-workflow/: SKILL.md
src/moot/templates/teams/loop-3/: team.toml
src/moot/templates/teams/loop-4/: team.toml
src/moot/templates/teams/loop-4-observer/: team.toml
src/moot/templates/teams/loop-4-parallel/: team.toml
src/moot/templates/teams/loop-4-split-leader/: team.toml
tests/: test_auth.py  test_channel_adapter.py  test_cli.py  test_config.py  test_devcontainer.py  test_example.py  test_launch.py  test_lifecycle.py  test_models.py  test_package.py  test_provision.py  test_response_format.py  test_run_moot_wrappers_inj.py  test_scaffold.py  test_security.py  test_templates.py
