[project]
name = "mootup"
version = "0.1.0"
description = "CLI + MCP adapters for Convo agent teams"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=14.0",
    "anyio>=4.0",
]

[project.scripts]
moot = "moot.cli:main"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pyright>=1.1.380",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moot"]
